--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth-api-tutorial",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Tom Nagle",
+  "author": "Everydev",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.33.3",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "argon2": "^0.28.3",
     "config": "^3.3.7",
     "dayjs": "^1.10.7",
@@ -31,6 +33,8 @@
     "nanoid": "^3.1.30",
     "nodemailer": "^6.7.2",
     "pino": "^7.6.1",
+    "swagger-jsdoc": "^6.2.0",
+    "swagger-ui-express": "^4.3.0",
     "zod": "^3.11.6"
   }
 }
