--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "local-dev": "cross-env NODE_ENV=local-dev ts-node-dev --respawn --transpile-only src/app.ts",
+    "hosted-dev": "cross-env NODE_ENV=hosted-dev ts-node-dev --respawn --transpile-only src/app.ts",
+    "production": "cross-env NODE_ENV=production ts-node-dev --respawn --transpile-only src/app.ts",
     "gen": "plop"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "argon2": "^0.28.3",
     "config": "^3.3.7",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^5.0.0-alpha.8",
