--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-api-tutorial",
+  "name": "api-goodfood",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Everydev",
@@ -8,7 +8,6 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "local-dev": "cross-env NODE_ENV=local-dev ts-node-dev --respawn --transpile-only src/app.ts",
     "hosted-dev": "cross-env NODE_ENV=hosted-dev ts-node-dev --respawn --transpile-only src/app.ts",
-    "production": "cross-env NODE_ENV=production ts-node-dev --respawn --transpile-only src/app.ts",
     "gen": "plop"
   },
   "devDependencies": {
@@ -31,7 +30,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
-    "express": "^5.0.0-alpha.8",
+    "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
