--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Everydev",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "start": "ts-node src/app.ts",
     "local-dev": "cross-env NODE_ENV=local-dev ts-node-dev --respawn --transpile-only src/app.ts",
     "hosted-dev": "cross-env NODE_ENV=hosted-dev ts-node-dev --respawn --transpile-only src/app.ts",
     "gen": "plop"
