--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "pino": "^7.6.1",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
-    "zod": "^3.11.6"
+    "zod": "^3.11.6",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.5.4"
   }
 }
