--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Everydev",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "local-dev": "cross-env NODE_ENV=local-dev ts-node-dev --respawn --transpile-only src/app.ts",
     "hosted-dev": "cross-env NODE_ENV=hosted-dev ts-node-dev --respawn --transpile-only src/app.ts",
     "gen": "plop"
@@ -38,6 +39,7 @@
     "pino": "^7.6.1",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
+    "tsc": "^2.0.4",
     "zod": "^3.11.6"
   }
 }
