--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pino-pretty": "^7.3.0",
     "plop": "^3.0.5",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "config": "^3.3.7"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.33.3",
