--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pino": "^7.6.1",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.7.0",
     "zod": "^3.11.6"
   }
 }
