--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "argon2": "^0.28.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "config": "^3.3.7",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
