--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.178",
     "@types/nodemailer": "^6.4.4",
+    "@types/zxcvbn": "^4.4.1",
     "plop": "^3.0.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
@@ -29,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
@@ -42,6 +44,7 @@
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.7.0",
-    "zod": "^3.11.6"
+    "zod": "^3.11.6",
+    "zxcvbn": "^4.4.2"
   }
 }
