--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
